# PasswordManager

./: .gitignore  CMakeLists.txt  PasswordManager.bat  README.md  build.bat  main.out
data/: fullData.txt
src/: CommandLine.cpp  CommandLine.hpp  main.cpp
src/Command/: AddAccount.cpp  AddAccount.hpp  Command.cpp  Command.hpp  GetPassword.cpp  GetPassword.hpp  Removal.cpp  Removal.hpp  ShowUsernames.cpp  ShowUsernames.hpp
src/StaticLib/: StringHandler.cpp  StringHandler.hpp  TreeSerializer.cpp  TreeSerializer.hpp
